[package]
name = "peckr"
description = "Packet Echo Check in Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
surge-ping = "0.8.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
